# vkbevy

./: Cargo.toml  README.md
assets/shaders/: triangle.frag.glsl  triangle.vert.glsl
src/: main.rs  mesh.rs  shader.rs  vk_bevy_instance.rs
