[package]
name = "vkbevy"
version = "0.1.0"
edition = "2021"

[features]
trace = []

[dependencies]
anyhow = "1.0"
ash = { version = "0.38.0", features = ["linked", "debug"] }
ash-window = "0.13.0"
bevy = { version = "0.19", default-features = false, features = [
  "bevy_winit",
  "bevy_log",
  "debug",
] }
bytemuck = "1.16.0"
gpu-allocator = { git = "https://github.com/Traverse-Research/gpu-allocator", branch = "ash-0.38" }
rspirv = "0.13"
shaderc = "0.10"
winit = "0.30"
smallvec = "1.15"
